# BambangBot

./: .env.example  .replit  =2023.12.30  main.py  pyproject.toml  requirements.txt
Cogs/Google search/: googlesearch.py  requirements.txt
Cogs/Help/: help.py
Cogs/Moderation/: memberjoin.py  mod.py  reports.json
Cogs/Moderation/data/: memberjoin_settings.json
Cogs/Music/: Music.py  music.py
Cogs/Role/: AddRole.py  ReactionRole.py  RemoveRole.py
Cogs/Role/RoleData/: reaction_roles.json
