
[project]
name = "discord-bot"
version = "0.1.0"
description = "Discord bot with moderation, music, and search features"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "py-cord>=2.4.0",
    "googlesearch-python>=1.2.3",
    "beautifulsoup4>=4.12.0",
    "youtube-dl>=2021.12.17",
    "PyNaCl>=1.5.0",
    "async-timeout>=4.0.2",
    "pyffmpeg==2.4.2.18.1",
    "ffmpeg==1.4",
    "ffmpeg-normalize==1.30.0",
    "ffmpeg-downloader==0.3.0",
    "python-ffmpeg-video-streaming==0.1.16",
]
