
[project]
name = "discord-bot"
version = "0.1.0"
description = "Discord bot with moderation, music, and search features"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "googlesearch-python>=1.2.3",
    "beautifulsoup4>=4.12.0",
    "yt-dlp>=2023.12.30",
    "pynacl[voice]>=1.5.0",
    "async-timeout>=4.0.2",
    "discord-py>=2.5.2",
    "ffmpeg==1.4",
    "pyffmpeg==2.4.2.18.1",
    "ffmpeg-downloader==0.3.0",
    "python-ffmpeg-video-streaming==0.1.16",
    "better-ffmpeg-progress==2.5.8",
    "ffmpeg-normalize==1.30.0",
    
    "ffmpeg-python>=0.2.0",
    "py-cord>=2.6.1",
]
