
[project]
name = "discord-bot"
version = "0.1.0"
description = "Discord bot with moderation, music, and search features"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "py-cord>=2.6.1",
    "googlesearch-python>=1.2.3",
    "beautifulsoup4>=4.12.0",
    "yt-dlp>=2023.12.30",
    "pynacl[voice]>=1.5.0",
    "async-timeout>=4.0.2",
]
